Changed various html templates to have opening balance

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -246,6 +246,10 @@
                 <span>KSHS {{ opening_bank_balance | format_currency }}</span>
             </div>
             <div class="summary-item">
+                <strong>Opening Balance</strong>
+                <span>KSH {{ current_user.opening_balance | format_currency }}</span>
+            </div>
+            <div class="summary-item">
                 <strong>Total Received</strong>
                 <span>KSHS {{ total_received | format_currency }}</span>
             </div>
