--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -212,6 +212,14 @@
         </div>
 
         <div class="form-group">
+          {{ form.opening_balance.label(class="form-label") }}
+          {{ form.opening_balance(class="form-control") }}
+          {% for error in form.opening_balance.errors %}
+              <div class="error-message">{{ error }}</div>
+          {% endfor %}
+      </div>
+      
+        <div class="form-group">
           {{ form.house_number.label(class="form-label") }}
           {{ form.house_number(class="form-control") }}
           {% for error in form.house_number.errors %}
