--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -231,8 +231,7 @@
 <body>
   <!-- Navigation Bar -->
   <nav>
-    <a href="{{ url_for('home') }}">Home</a>
-    <a href="{{ url_for('dashboard') }}" class="active">My Dashboard</a>
+        <a href="{{ url_for('dashboard') }}" class="active">My Dashboard</a>
 
     <!-- Admin-Specific Menus -->
     {% if session.get('user_role') == 'admin' %}
@@ -242,6 +241,7 @@
       <a href="{{ url_for('add_user') }}">Add User</a>
     {% endif %}
 
+    <a href="{{ url_for('add_payment') }}">Add Payment</a>
     <a href="{{ url_for('fund_utilization_view') }}">Funds Utilization</a>
     <a href="{{ url_for('logout') }}">Logout</a>
     <a href="{{ url_for('change_password') }}">Change Password</a>
